logs/tracking/build.make.225.log.stderr
In file included from /home/dexheimere/thesis_ws/src/tracking/src/PixelSelector.cpp:1:0:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/PixelSelector.h:19:40: error: extra qualification ‘PixelSelector::’ on member ‘epipolar_line_search’ [-fpermissive]
  Eigen::Matrix<float,2,Eigen::Dynamic> PixelSelector::epipolar_line_search(Eigen::Matrix4f T, 
                                        ^
/home/dexheimere/thesis_ws/src/tracking/src/PixelSelector.cpp:81:115: error: expected ‘,’ or ‘...’ before ‘&’ token
 Eigen::Vector2f epipolar_match(Eigen::Vector3f p_h, Eigen::Matrix3f F, cv::Mat curr, cv::Mat ref_patch, bool match&) {
                                                                                                                   ^
make[2]: *** [CMakeFiles/tracking.dir/src/PixelSelector.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:6:0,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/PixelSelector.h:19:40: error: extra qualification ‘PixelSelector::’ on member ‘epipolar_line_search’ [-fpermissive]
  Eigen::Matrix<float,2,Eigen::Dynamic> PixelSelector::epipolar_line_search(Eigen::Matrix4f T, 
                                        ^
In file included from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:6:0,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/home/dexheimere/thesis_ws/src/tracking/include/tracking/PixelSelector.h:19:40: error: extra qualification ‘PixelSelector::’ on member ‘epipolar_line_search’ [-fpermissive]
  Eigen::Matrix<float,2,Eigen::Dynamic> PixelSelector::epipolar_line_search(Eigen::Matrix4f T, 
                                        ^
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In function ‘Eigen::Matrix<float, 8, 1> optimize(Eigen::Matrix<float, 8, 1>, cv::Mat, cv::Mat, cv::Mat, cv::Mat, cv::Mat, Eigen::MatrixXf, Eigen::Matrix3f, cv::Mat)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:128:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
make[2]: *** [CMakeFiles/tracking.dir/src/main.cpp.o] Error 1
make[2]: *** [CMakeFiles/tracking.dir/src/SparseAlignment.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
